eks-lesson/be-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  selector:
    matchLabels:
      app: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: {ECR_REPOSITORY_URI_BACKEND}:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
