eks-lesson/fe-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
spec:
  selector:
    matchLabels:
      app: frontend
  replicas: 2
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: {ECR_REPOSITORY_URI_FRONTEND}:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
